--- a/.config
+++ b/.config
@@ -2480,6 +2480,11 @@ CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerifCondensed-Italic=m
 CONFIG_PACKAGE_flowping=m
 
 #
+# Kernel image
+#
+# CONFIG_PACKAGE_kernel-image is not set
+
+#
 # Kernel modules
 #
 
@@ -2513,6 +2518,7 @@ CONFIG_PACKAGE_kmod-can-c-can-platform=m
 CONFIG_PACKAGE_kmod-can-gw=m
 CONFIG_PACKAGE_kmod-can-raw=m
 CONFIG_PACKAGE_kmod-can-slcan=m
+CONFIG_PACKAGE_kmod-can-spi-mcp251x=m
 CONFIG_PACKAGE_kmod-can-usb-8dev=m
 CONFIG_PACKAGE_kmod-can-usb-ems=m
 CONFIG_PACKAGE_kmod-can-usb-esd=m
@@ -3598,241 +3604,146 @@ CONFIG_PACKAGE_pillow=m
 CONFIG_PACKAGE_python=m
 CONFIG_PACKAGE_python-asn1crypto=m
 CONFIG_PACKAGE_python-attrs=m
-CONFIG_PACKAGE_python-attrs-src=m
 CONFIG_PACKAGE_python-automat=m
-CONFIG_PACKAGE_python-automat-src=m
 CONFIG_PACKAGE_python-base=m
-CONFIG_PACKAGE_python-base-src=m
 CONFIG_PACKAGE_python-cffi=m
-CONFIG_PACKAGE_python-cffi-src=m
 CONFIG_PACKAGE_python-codecs=m
-CONFIG_PACKAGE_python-codecs-src=m
 CONFIG_PACKAGE_python-compiler=m
-CONFIG_PACKAGE_python-compiler-src=m
 CONFIG_PACKAGE_python-constantly=m
-CONFIG_PACKAGE_python-constantly-src=m
 CONFIG_PACKAGE_python-crcmod=m
 CONFIG_PACKAGE_python-crypto=m
-CONFIG_PACKAGE_python-crypto-src=m
 CONFIG_PACKAGE_python-cryptography=m
-CONFIG_PACKAGE_python-cryptography-src=m
 CONFIG_PACKAGE_python-ctypes=m
-CONFIG_PACKAGE_python-ctypes-src=m
 CONFIG_PACKAGE_python-curl=m
+CONFIG_PACKAGE_python-cython=m
 CONFIG_PACKAGE_python-dateutil=m
 CONFIG_PACKAGE_python-db=m
-CONFIG_PACKAGE_python-db-src=m
 CONFIG_PACKAGE_python-decimal=m
-CONFIG_PACKAGE_python-decimal-src=m
 CONFIG_PACKAGE_python-dev=m
-CONFIG_PACKAGE_python-dev-src=m
 CONFIG_PACKAGE_python-distutils=m
-CONFIG_PACKAGE_python-distutils-src=m
 CONFIG_PACKAGE_python-dns=m
 CONFIG_PACKAGE_python-dpkt=m
 CONFIG_PACKAGE_python-egenix-mx-base=m
 CONFIG_PACKAGE_python-email=m
-CONFIG_PACKAGE_python-email-src=m
 CONFIG_PACKAGE_python-enum34=m
-CONFIG_PACKAGE_python-enum34-src=m
 CONFIG_PACKAGE_python-evdev=m
 CONFIG_PACKAGE_python-gdbm=m
-CONFIG_PACKAGE_python-gdbm-src=m
 CONFIG_PACKAGE_python-gmpy2=m
 CONFIG_PACKAGE_python-gnupg=m
 CONFIG_PACKAGE_python-hyperlink=m
-CONFIG_PACKAGE_python-hyperlink-src=m
 CONFIG_PACKAGE_python-idna=m
-CONFIG_PACKAGE_python-idna-src=m
 # CONFIG_PACKAGE_python-imaging-library is not set
 CONFIG_PACKAGE_python-incremental=m
-CONFIG_PACKAGE_python-incremental-src=m
 CONFIG_PACKAGE_python-ipaddress=m
-CONFIG_PACKAGE_python-ipaddress-src=m
 CONFIG_PACKAGE_python-ldap=m
 CONFIG_PACKAGE_python-lib2to3=m
-CONFIG_PACKAGE_python-lib2to3-src=m
 CONFIG_PACKAGE_python-light=m
-
-#
-# Configuration
-#
-# CONFIG_PYTHON_BLUETOOTH_SUPPORT is not set
-CONFIG_PACKAGE_python-light-src=m
 CONFIG_PACKAGE_python-logging=m
-CONFIG_PACKAGE_python-logging-src=m
 CONFIG_PACKAGE_python-lxml=m
 CONFIG_PACKAGE_python-multiprocessing=m
-CONFIG_PACKAGE_python-multiprocessing-src=m
 CONFIG_PACKAGE_python-mysql=m
 CONFIG_PACKAGE_python-ncurses=m
-CONFIG_PACKAGE_python-ncurses-src=m
 CONFIG_PACKAGE_python-openssl=m
-CONFIG_PACKAGE_python-openssl-src=m
-CONFIG_PACKAGE_python-packages=m
-CONFIG_PACKAGE_python-packages-list-host="cython"
-CONFIG_PACKAGE_python-packages-list="paho-mqtt colorama etaprogress python-can canopen wiringpi"
-CONFIG_PACKAGE_python-packages-list-cleanup=""
-CONFIG_PACKAGE_python-packages-envs=""
-CONFIG_PACKAGE_python-packages-extra-deps=""
-CONFIG_PACKAGE_python-packages-index-url="https://pypi.python.org/simple"
-CONFIG_PACKAGE_python-packages-pip-opts=""
+# CONFIG_PACKAGE_python-packages is not set
 CONFIG_PACKAGE_python-parsley=m
-CONFIG_PACKAGE_python-parsley-src=m
 CONFIG_PACKAGE_python-pcapy=m
-CONFIG_PACKAGE_python-pip=m
 CONFIG_PACKAGE_python-pip-conf=m
-CONFIG_PACKAGE_python-pip-src=m
 CONFIG_PACKAGE_python-ply=m
-CONFIG_PACKAGE_python-ply-src=m
 CONFIG_PACKAGE_python-psycopg2=m
 CONFIG_PACKAGE_python-pyasn1=m
 CONFIG_PACKAGE_python-pyasn1-modules=m
-CONFIG_PACKAGE_python-pyasn1-modules-src=m
-CONFIG_PACKAGE_python-pyasn1-src=m
 CONFIG_PACKAGE_python-pycparser=m
-CONFIG_PACKAGE_python-pycparser-src=m
 CONFIG_PACKAGE_python-pydoc=m
-CONFIG_PACKAGE_python-pydoc-src=m
 CONFIG_PACKAGE_python-pyodbc=m
 CONFIG_PACKAGE_python-pyopenssl=m
-CONFIG_PACKAGE_python-pyopenssl-src=m
 CONFIG_PACKAGE_python-pyptlib=m
-CONFIG_PACKAGE_python-pyptlib-src=m
 CONFIG_PACKAGE_python-pyserial=m
 CONFIG_PACKAGE_python-rpi-gpio=m
 CONFIG_PACKAGE_python-service-identity=m
-CONFIG_PACKAGE_python-service-identity-src=m
 CONFIG_PACKAGE_python-setuptools=m
-CONFIG_PACKAGE_python-setuptools-src=m
 CONFIG_PACKAGE_python-six=m
-CONFIG_PACKAGE_python-six-src=m
 CONFIG_PACKAGE_python-smbus=m
 CONFIG_PACKAGE_python-sqlite3=m
-CONFIG_PACKAGE_python-sqlite3-src=m
 CONFIG_PACKAGE_python-txsocksx=m
-CONFIG_PACKAGE_python-txsocksx-src=m
 CONFIG_PACKAGE_python-unittest=m
-CONFIG_PACKAGE_python-unittest-src=m
 CONFIG_PACKAGE_python-urllib3=m
 CONFIG_PACKAGE_python-xml=m
-CONFIG_PACKAGE_python-xml-src=m
 CONFIG_PACKAGE_python-yaml=m
 CONFIG_PACKAGE_python-zope-interface=m
-CONFIG_PACKAGE_python-zope-interface-src=m
 CONFIG_PACKAGE_python3=m
-CONFIG_PACKAGE_python3-Cython=m
-CONFIG_PACKAGE_python3-Pillow=m
 CONFIG_PACKAGE_python3-apsw=m
 CONFIG_PACKAGE_python3-arrow=m
 CONFIG_PACKAGE_python3-asn1crypto=m
 CONFIG_PACKAGE_python3-asyncio=m
-CONFIG_PACKAGE_python3-asyncio-src=m
 CONFIG_PACKAGE_python3-attrs=m
-CONFIG_PACKAGE_python3-attrs-src=m
 CONFIG_PACKAGE_python3-automat=m
-CONFIG_PACKAGE_python3-automat-src=m
 CONFIG_PACKAGE_python3-base=m
-CONFIG_PACKAGE_python3-base-src=m
 CONFIG_PACKAGE_python3-bottle=m
 CONFIG_PACKAGE_python3-can=m
 CONFIG_PACKAGE_python3-canopen=m
 CONFIG_PACKAGE_python3-cffi=m
-CONFIG_PACKAGE_python3-cffi-src=m
 CONFIG_PACKAGE_python3-cgi=m
-CONFIG_PACKAGE_python3-cgi-src=m
 CONFIG_PACKAGE_python3-cgitb=m
-CONFIG_PACKAGE_python3-cgitb-src=m
 CONFIG_PACKAGE_python3-click=m
 CONFIG_PACKAGE_python3-codecs=m
-CONFIG_PACKAGE_python3-codecs-src=m
 CONFIG_PACKAGE_python3-colorama=m
 CONFIG_PACKAGE_python3-connexion=m
 CONFIG_PACKAGE_python3-constantly=m
-CONFIG_PACKAGE_python3-constantly-src=m
 CONFIG_PACKAGE_python3-crypto=m
-CONFIG_PACKAGE_python3-crypto-src=m
 CONFIG_PACKAGE_python3-cryptography=m
-CONFIG_PACKAGE_python3-cryptography-src=m
 CONFIG_PACKAGE_python3-ctypes=m
-CONFIG_PACKAGE_python3-ctypes-src=m
 CONFIG_PACKAGE_python3-cycler=m
+CONFIG_PACKAGE_python3-cython=m
 CONFIG_PACKAGE_python3-dateutil=m
 CONFIG_PACKAGE_python3-dbm=m
-CONFIG_PACKAGE_python3-dbm-src=m
 CONFIG_PACKAGE_python3-decimal=m
-CONFIG_PACKAGE_python3-decimal-src=m
 CONFIG_PACKAGE_python3-dev=m
-CONFIG_PACKAGE_python3-dev-src=m
 CONFIG_PACKAGE_python3-distutils=m
-CONFIG_PACKAGE_python3-distutils-src=m
 CONFIG_PACKAGE_python3-email=m
-CONFIG_PACKAGE_python3-email-src=m
 CONFIG_PACKAGE_python3-etaprogress=m
 CONFIG_PACKAGE_python3-evdev=m
 CONFIG_PACKAGE_python3-flask=m
 CONFIG_PACKAGE_python3-gdbm=m
-CONFIG_PACKAGE_python3-gdbm-src=m
 CONFIG_PACKAGE_python3-gmpy2=m
 CONFIG_PACKAGE_python3-gnupg=m
 CONFIG_PACKAGE_python3-hyperlink=m
-CONFIG_PACKAGE_python3-hyperlink-src=m
 CONFIG_PACKAGE_python3-idna=m
-CONFIG_PACKAGE_python3-idna-src=m
 CONFIG_PACKAGE_python3-incremental=m
-CONFIG_PACKAGE_python3-incremental-src=m
 CONFIG_PACKAGE_python3-influxdb=m
 CONFIG_PACKAGE_python3-itsdangerous=m
 CONFIG_PACKAGE_python3-jinja2=m
 CONFIG_PACKAGE_python3-lib2to3=m
-CONFIG_PACKAGE_python3-lib2to3-src=m
 CONFIG_PACKAGE_python3-libxx-installer=m
 CONFIG_PACKAGE_python3-light=m
-
-#
-# Configuration
-#
-# CONFIG_PYTHON3_BLUETOOTH_SUPPORT is not set
-CONFIG_PACKAGE_python3-light-src=m
 CONFIG_PACKAGE_python3-logging=m
-CONFIG_PACKAGE_python3-logging-src=m
 CONFIG_PACKAGE_python3-luma.core=m
 CONFIG_PACKAGE_python3-luma.oled=m
 CONFIG_PACKAGE_python3-lxml=m
 CONFIG_PACKAGE_python3-lzma=m
-CONFIG_PACKAGE_python3-lzma-src=m
 CONFIG_PACKAGE_python3-markupsafe=m
 # CONFIG_PACKAGE_python3-matplotlib is not set
 CONFIG_PACKAGE_python3-multiprocessing=m
-CONFIG_PACKAGE_python3-multiprocessing-src=m
 CONFIG_PACKAGE_python3-ncurses=m
-CONFIG_PACKAGE_python3-ncurses-src=m
 CONFIG_PACKAGE_python3-netifaces=m
 CONFIG_PACKAGE_python3-nose=m
 CONFIG_PACKAGE_python3-numpy=m
+CONFIG_PACKAGE_python3-obspy-installer=m
 CONFIG_PACKAGE_python3-openssl=m
-CONFIG_PACKAGE_python3-openssl-src=m
 CONFIG_PACKAGE_python3-paho-mqtt=m
 # CONFIG_PACKAGE_python3-pandas is not set
 CONFIG_PACKAGE_python3-parsley=m
-CONFIG_PACKAGE_python3-parsley-src=m
+CONFIG_PACKAGE_python3-pillow=m
 CONFIG_PACKAGE_python3-pip=m
-CONFIG_PACKAGE_python3-pip-src=m
 CONFIG_PACKAGE_python3-ply=m
-CONFIG_PACKAGE_python3-ply-src=m
 CONFIG_PACKAGE_python3-prctl=m
+CONFIG_PACKAGE_python3-psutil=m
 # CONFIG_PACKAGE_python3-pyarrow is not set
 CONFIG_PACKAGE_python3-pyasn1=m
 CONFIG_PACKAGE_python3-pyasn1-modules=m
-CONFIG_PACKAGE_python3-pyasn1-modules-src=m
-CONFIG_PACKAGE_python3-pyasn1-src=m
 CONFIG_PACKAGE_python3-pycparser=m
-CONFIG_PACKAGE_python3-pycparser-src=m
 CONFIG_PACKAGE_python3-pydoc=m
-CONFIG_PACKAGE_python3-pydoc-src=m
 CONFIG_PACKAGE_python3-pyodbc=m
 CONFIG_PACKAGE_python3-pyopenssl=m
-CONFIG_PACKAGE_python3-pyopenssl-src=m
 CONFIG_PACKAGE_python3-pyparsing=m
 CONFIG_PACKAGE_python3-pyserial=m
 CONFIG_PACKAGE_python3-pytool=m
@@ -3840,31 +3751,24 @@ CONFIG_PACKAGE_python3-pytz=m
 CONFIG_PACKAGE_python3-queuelib=m
 CONFIG_PACKAGE_python3-scixx-installer=m
 CONFIG_PACKAGE_python3-service-identity=m
-CONFIG_PACKAGE_python3-service-identity-src=m
 CONFIG_PACKAGE_python3-setuptools=m
-CONFIG_PACKAGE_python3-setuptools-src=m
+CONFIG_PACKAGE_python3-setuptools-scm=m
 CONFIG_PACKAGE_python3-six=m
-CONFIG_PACKAGE_python3-six-src=m
 CONFIG_PACKAGE_python3-smbus=m
 CONFIG_PACKAGE_python3-smbus2=m
 CONFIG_PACKAGE_python3-sqlite3=m
-CONFIG_PACKAGE_python3-sqlite3-src=m
 CONFIG_PACKAGE_python3-ujson=m
 CONFIG_PACKAGE_python3-unittest=m
-CONFIG_PACKAGE_python3-unittest-src=m
 CONFIG_PACKAGE_python3-werkzeug=m
 CONFIG_PACKAGE_python3-wiringpi=m
 CONFIG_PACKAGE_python3-xml=m
-CONFIG_PACKAGE_python3-xml-src=m
 CONFIG_PACKAGE_python3-xmltodict=m
 CONFIG_PACKAGE_python3-yaml=m
 CONFIG_PACKAGE_python3-zope-interface=m
-CONFIG_PACKAGE_python3-zope-interface-src=m
 CONFIG_PACKAGE_pytz=m
 CONFIG_PACKAGE_rcssmin=m
 CONFIG_PACKAGE_simplejson=m
 CONFIG_PACKAGE_twisted=m
-CONFIG_PACKAGE_twisted-src=m
 
 #
 # Ruby
@@ -4763,29 +4667,29 @@ CONFIG_PACKAGE_luci-base=m
 #
 # Translations
 #
-# CONFIG_LUCI_LANG_uk is not set
 # CONFIG_LUCI_LANG_hu is not set
 # CONFIG_LUCI_LANG_pt is not set
-# CONFIG_LUCI_LANG_ko is not set
-# CONFIG_LUCI_LANG_en is not set
-# CONFIG_LUCI_LANG_el is not set
 # CONFIG_LUCI_LANG_sk is not set
-# CONFIG_LUCI_LANG_ru is not set
-# CONFIG_LUCI_LANG_vi is not set
-# CONFIG_LUCI_LANG_de is not set
 # CONFIG_LUCI_LANG_no is not set
-# CONFIG_LUCI_LANG_ms is not set
+# CONFIG_LUCI_LANG_en is not set
 # CONFIG_LUCI_LANG_pl is not set
-# CONFIG_LUCI_LANG_zh-cn is not set
-# CONFIG_LUCI_LANG_ro is not set
+# CONFIG_LUCI_LANG_uk is not set
+# CONFIG_LUCI_LANG_ja is not set
+# CONFIG_LUCI_LANG_vi is not set
 # CONFIG_LUCI_LANG_he is not set
+# CONFIG_LUCI_LANG_ro is not set
+# CONFIG_LUCI_LANG_pt-br is not set
+# CONFIG_LUCI_LANG_ms is not set
+# CONFIG_LUCI_LANG_zh-cn is not set
+# CONFIG_LUCI_LANG_ko is not set
+# CONFIG_LUCI_LANG_de is not set
 # CONFIG_LUCI_LANG_zh-tw is not set
 # CONFIG_LUCI_LANG_tr is not set
 # CONFIG_LUCI_LANG_sv is not set
-# CONFIG_LUCI_LANG_ja is not set
+# CONFIG_LUCI_LANG_ru is not set
+# CONFIG_LUCI_LANG_el is not set
 # CONFIG_LUCI_LANG_ca is not set
 # CONFIG_LUCI_LANG_es is not set
-# CONFIG_LUCI_LANG_pt-br is not set
 # CONFIG_LUCI_LANG_cs is not set
 # CONFIG_LUCI_LANG_fr is not set
 # CONFIG_LUCI_LANG_it is not set
@@ -6573,7 +6477,7 @@ CONFIG_OPENVPN_openssl_ENABLE_PF=y
 # CONFIG_OPENVPN_openssl_ENABLE_IPROUTE2 is not set
 CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
 CONFIG_PACKAGE_pptpd=m
-CONFIG_PACKAGE_softethervpn=m
+# CONFIG_PACKAGE_softethervpn is not set
 CONFIG_PACKAGE_sstp-client=m
 CONFIG_PACKAGE_strongswan=m
 
@@ -7138,13 +7042,21 @@ CONFIG_PACKAGE_xinetd=m
 # SHM
 #
 CONFIG_PACKAGE_shm-canstreamer=m
+CONFIG_PACKAGE_shm-canstreamer-devel=m
 CONFIG_PACKAGE_shm-canstreamer-lift=m
+CONFIG_PACKAGE_shm-canstreamer-lift-devel=m
 CONFIG_PACKAGE_shm-gateway=m
+CONFIG_PACKAGE_shm-gateway-devel=m
 CONFIG_PACKAGE_shm-gateway-lift=m
+CONFIG_PACKAGE_shm-gateway-lift-devel=m
 CONFIG_PACKAGE_shm-nodered=m
+CONFIG_PACKAGE_shm-nodered-devel=m
 CONFIG_PACKAGE_shm-nodered-lift=m
+CONFIG_PACKAGE_shm-nodered-lift-devel=m
 CONFIG_PACKAGE_shm-oledui=m
+CONFIG_PACKAGE_shm-oledui-devel=m
 CONFIG_PACKAGE_shm-plc-cli=m
+CONFIG_PACKAGE_shm-plc-cli-devel=m
 CONFIG_PACKAGE_uarttest=m
 
 #
@@ -7820,6 +7732,9 @@ CONFIG_MC_CHARSET=y
 CONFIG_PACKAGE_mcookie=m
 CONFIG_PACKAGE_mmc-utils=m
 CONFIG_PACKAGE_moreutils=m
+CONFIG_PACKAGE_mosh-client=m
+CONFIG_PACKAGE_mosh-full=m
+CONFIG_PACKAGE_mosh-server=m
 CONFIG_PACKAGE_mount-utils=m
 CONFIG_PACKAGE_mountd=m
 CONFIG_PACKAGE_mpack=m
@@ -8115,4 +8030,3 @@ CONFIG_PACKAGE_yunbridge=m
 # font-utils
 #
 CONFIG_PACKAGE_fontconfig=m
-CONFIG_OVERRIDE_PKGS="node-arduino-firmata"
