--- a/.config
+++ b/.config
@@ -323,8 +323,8 @@ CONFIG_LIBC_VERSION="2.24"
 CONFIG_TARGET_SUFFIX="gnueabi"
 CONFIG_IB=y
 CONFIG_IB_STANDALONE=y
-# CONFIG_SDK is not set
-# CONFIG_MAKE_TOOLCHAIN is not set
+CONFIG_SDK=y
+CONFIG_MAKE_TOOLCHAIN=y
 CONFIG_IMAGEOPT=y
 # CONFIG_PREINITOPT is not set
 CONFIG_TARGET_PREINIT_SUPPRESS_STDERR=y
@@ -4234,17 +4234,17 @@ CONFIG_PACKAGE_libdaq=m
 CONFIG_PACKAGE_libdb47=y
 CONFIG_PACKAGE_libdb47xx=m
 # CONFIG_PACKAGE_libdbi is not set
+CONFIG_PACKAGE_libdbus=m
 CONFIG_PACKAGE_libdevmapper=m
 CONFIG_PACKAGE_libdmapsharing=m
 CONFIG_PACKAGE_libdnet=m
 CONFIG_PACKAGE_libdouble-conversion=m
 CONFIG_PACKAGE_libdrm=m
+CONFIG_PACKAGE_libecdsautil=m
 CONFIG_PACKAGE_libedit=m
 CONFIG_PACKAGE_libelf1=m
 CONFIG_PACKAGE_libasm=m
-CONFIG_PACKAGE_libdbus=m
 CONFIG_PACKAGE_libdw=m
-CONFIG_PACKAGE_libecdsautil=m
 CONFIG_PACKAGE_libesmtp=m
 CONFIG_PACKAGE_libestr=y
 CONFIG_PACKAGE_libev=m
@@ -4433,7 +4433,6 @@ CONFIG_PACKAGE_libndpi=m
 CONFIG_PACKAGE_libneon=m
 CONFIG_PACKAGE_libnet-1.2.x=y
 # CONFIG_PACKAGE_libnet0 is not set
-CONFIG_PACKAGE_libnet1=m
 CONFIG_PACKAGE_libnetconf2=m
 CONFIG_PACKAGE_libnetfilter-acct=m
 CONFIG_PACKAGE_libnetfilter-conntrack=m
@@ -4671,19 +4670,19 @@ CONFIG_PACKAGE_luci-base=y
 # CONFIG_LUCI_LANG_hu is not set
 # CONFIG_LUCI_LANG_pt is not set
 # CONFIG_LUCI_LANG_sk is not set
-# CONFIG_LUCI_LANG_ro is not set
+# CONFIG_LUCI_LANG_no is not set
 # CONFIG_LUCI_LANG_en is not set
 # CONFIG_LUCI_LANG_pl is not set
 # CONFIG_LUCI_LANG_uk is not set
 # CONFIG_LUCI_LANG_ja is not set
 # CONFIG_LUCI_LANG_vi is not set
-# CONFIG_LUCI_LANG_de is not set
-# CONFIG_LUCI_LANG_no is not set
+# CONFIG_LUCI_LANG_he is not set
+# CONFIG_LUCI_LANG_ro is not set
 # CONFIG_LUCI_LANG_pt-br is not set
 # CONFIG_LUCI_LANG_ms is not set
 # CONFIG_LUCI_LANG_zh-cn is not set
 # CONFIG_LUCI_LANG_ko is not set
-# CONFIG_LUCI_LANG_he is not set
+# CONFIG_LUCI_LANG_de is not set
 # CONFIG_LUCI_LANG_zh-tw is not set
 # CONFIG_LUCI_LANG_tr is not set
 # CONFIG_LUCI_LANG_sv is not set
@@ -7980,7 +7979,6 @@ CONFIG_PACKAGE_strace=m
 # CONFIG_PACKAGE_strace_libunwind is not set
 CONFIG_PACKAGE_stress=m
 CONFIG_PACKAGE_sumo=m
-CONFIG_PACKAGE_sysbench=m
 CONFIG_PACKAGE_sysrepo=m
 CONFIG_PACKAGE_sysrepocfg=m
 CONFIG_PACKAGE_sysrepoctl=m
